[tool.poetry]
name = "atcoder-helper"
version = "0.1.0"
description = ""
authors = ["Kenji Miyake <31987104+kenji-miyake@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.8"

[tool.poetry.dev-dependencies]
ipython = "^7.6"
ipdb = "^0.12.0"
flake8 = "^3.7"
pep8-naming = "^0.8.2"
mypy = "^0.720.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"

[tool.poetry.scripts]
atcoder-helper = "atcoder_helper.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
