[tool.poetry]
name = "atcoder-helper"
version = "0.3.0"
description = "Simple CLI helper tool for AtCoder"
authors = ["Kenji Miyake <31987104+kenji-miyake@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "^1.12.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"

[tool.poetry.scripts]
atcoder-helper = "atcoder_helper.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
